option java_package = "steam.webui.embedded";

message CEmbeddedClient_AuthorizeCurrentDevice_Request {
	optional fixed64 steamid = 1;
	optional uint32 appid = 2;
	optional string device_info = 3;
	optional uint32 deviceid = 4;
}

message CEmbeddedClient_AuthorizeDevice_Response {
	optional uint32 result = 1;
	optional .CEmbeddedClient_Token token = 2;
}

message CEmbeddedClient_Token {
	optional fixed64 steamid = 1;
	optional bytes client_token = 2;
	optional uint32 expiry = 3;
	optional uint32 deviceid = 4;
}

service EmbeddedClient {
	// ePrivilege=1
	rpc AuthorizeCurrentDevice (.CEmbeddedClient_AuthorizeCurrentDevice_Request) returns (.CEmbeddedClient_AuthorizeDevice_Response);
}

